Fixing threads panel (sorted by desc updated_at and scrollbar)

--- a/spa/src/assets/danx/inputs.scss
+++ b/spa/src/assets/danx/inputs.scss
@@ -26,7 +26,7 @@
 			@apply text-slate-300;
 		}
 	}
-	
+
 	&.q-input {
 		.q-field__native {
 			@apply py-3
@@ -107,4 +107,8 @@
 			}
 		}
 	}
+}
+
+.dx-slider-number-field {
+	@apply pb-6;
 }
